--- a/CCIC - AI Projects/Semester 1 - 25/Titanic/Titanic.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Titanic/Titanic.ipynb
@@ -10,14 +10,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "d9db30a6-2e91-4121-89a9-f65b105efd4c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          714 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.7+ KB\n",
       "Number of 1st class female lone survivors in their cabin: 34\n",
       "1      Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
       "11                              Bonnell, Miss. Elizabeth\n",
@@ -53,7 +78,51 @@
       "853                            Lines, Miss. Mary Conover\n",
       "879        Potter, Mrs. Thomas Jr (Lily Alexenia Wilson)\n",
       "887                         Graham, Miss. Margaret Edith\n",
-      "Name: Name, dtype: object\n"
+      "Name: Name, dtype: object\n",
+      "Number of samples in dataset: 891\n",
+      "7th sample in dataset:\n",
+      "PassengerId                          7\n",
+      "Survived                             0\n",
+      "Pclass                               1\n",
+      "Name           McCarthy, Mr. Timothy J\n",
+      "Sex                               male\n",
+      "Age                               54.0\n",
+      "SibSp                                0\n",
+      "Parch                                0\n",
+      "Ticket                           17463\n",
+      "Fare                           51.8625\n",
+      "Cabin                              E46\n",
+      "Embarked                             S\n",
+      "CabinCount                         1.0\n",
+      "Name: 6, dtype: object\n",
+      "Passengers who embarked from Queenstown:\n",
+      "     PassengerId  Survived  Pclass                                  Name  \\\n",
+      "5              6         0       3                      Moran, Mr. James   \n",
+      "16            17         0       3                  Rice, Master. Eugene   \n",
+      "22            23         1       3           McGowan, Miss. Anna \"Annie\"   \n",
+      "28            29         1       3         O'Dwyer, Miss. Ellen \"Nellie\"   \n",
+      "32            33         1       3              Glynn, Miss. Mary Agatha   \n",
+      "..           ...       ...     ...                                   ...   \n",
+      "790          791         0       3              Keane, Mr. Andrew \"Andy\"   \n",
+      "825          826         0       3                       Flynn, Mr. John   \n",
+      "828          829         1       3          McCormack, Mr. Thomas Joseph   \n",
+      "885          886         0       3  Rice, Mrs. William (Margaret Norton)   \n",
+      "890          891         0       3                   Dooley, Mr. Patrick   \n",
+      "\n",
+      "        Sex   Age  SibSp  Parch  Ticket     Fare Cabin Embarked  CabinCount  \n",
+      "5      male   NaN      0      0  330877   8.4583   NaN        Q         NaN  \n",
+      "16     male   2.0      4      1  382652  29.1250   NaN        Q         NaN  \n",
+      "22   female  15.0      0      0  330923   8.0292   NaN        Q         NaN  \n",
+      "28   female   NaN      0      0  330959   7.8792   NaN        Q         NaN  \n",
+      "32   female   NaN      0      0  335677   7.7500   NaN        Q         NaN  \n",
+      "..      ...   ...    ...    ...     ...      ...   ...      ...         ...  \n",
+      "790    male   NaN      0      0   12460   7.7500   NaN        Q         NaN  \n",
+      "825    male   NaN      0      0  368323   6.9500   NaN        Q         NaN  \n",
+      "828    male   NaN      0      0  367228   7.7500   NaN        Q         NaN  \n",
+      "885  female  39.0      0      5  382652  29.1250   NaN        Q         NaN  \n",
+      "890    male  32.0      0      0  370376   7.7500   NaN        Q         NaN  \n",
+      "\n",
+      "[77 rows x 13 columns]\n"
      ]
     }
    ],
@@ -62,7 +131,7 @@
     "\n",
     "# Load dataset\n",
     "df = pd.read_csv('titanic.csv')\n",
-    "\n",
+    "df.info()\n",
     "# Count how many people shared each cabin\n",
     "df['CabinCount'] = df.groupby('Cabin')['PassengerId'].transform('count')\n",
     "\n",
@@ -75,177 +144,31 @@
     "# Display the count\n",
     "print(\"Number of 1st class female lone survivors in their cabin:\", len(lone_survivors))\n",
     "# Print their names\n",
-    "print(lone_survivors['Name'])\n"
+    "print(lone_survivors['Name'])\n",
+    "\n",
+    "# 1. Determine how many samples (rows) are in the dataset\n",
+    "print(\"Number of samples in dataset:\", len(df))\n",
+    "\n",
+    "# 2. Display the 7th sample (remember Python uses 0-based indexing, so 7th = index 6)\n",
+    "print(\"7th sample in dataset:\")\n",
+    "print(df.iloc[6])\n",
+    "\n",
+    "# 3. Display the samples who embarked from Queenstown (Embarked = 'Q')\n",
+    "queenstown_passengers = df[df['Embarked'] == 'Q']\n",
+    "print(\"Passengers who embarked from Queenstown:\")\n",
+    "print(queenstown_passengers)\n",
+    "\n",
+    "# Just names of Queenstown passengers\n",
+    "#print(df[df['Embarked'] == 'Q']['Name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e2f1552c-8504-4633-b9eb-c6da881d5350",
+   "execution_count": null,
+   "id": "3716e0be-004c-46c2-b672-b67129590397",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp',\n",
-      "       'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked'],\n",
-      "      dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
-       "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv('titanic.csv') \n",
-    "\n",
-    "# Display the column names\n",
-    "print(df.columns)\n",
-    "\n",
-    "df.head()\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
