Titanic Project Final

--- a/CCIC - AI Projects/Semester 1 - 25/Titanic/Titanic.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Titanic/Titanic.ipynb
@@ -9,11 +9,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74872e0c-b901-41ed-b37c-4410fcf1c5fa",
+   "metadata": {},
+   "source": [
+    "This analysis is an observational study, we are not manipulating any variables or assigning passengers to conditions. Instead, we are observing and analyzing existing historical data from the Titanic passenger list to answer the question. The type of observational study we are performing is retrospective as we will collect data from the past. We will use a census because it is more exact and representative of everyone who survived. We have to look at all the people to see how many 1st class female's survived alone out of the whole population."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "d9db30a6-2e91-4121-89a9-f65b105efd4c",
    "metadata": {
     "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -43,7 +52,9 @@
       " 11  Embarked     889 non-null    object \n",
       "dtypes: float64(2), int64(5), object(5)\n",
       "memory usage: 83.7+ KB\n",
+      "\n",
       "Number of 1st class female lone survivors in their cabin: 34\n",
+      "\n",
       "1      Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
       "11                              Bonnell, Miss. Elizabeth\n",
       "31        Spencer, Mrs. William Augustus (Marie Eugenie)\n",
@@ -79,8 +90,10 @@
       "879        Potter, Mrs. Thomas Jr (Lily Alexenia Wilson)\n",
       "887                         Graham, Miss. Margaret Edith\n",
       "Name: Name, dtype: object\n",
+      "\n",
       "Number of samples in dataset: 891\n",
       "7th sample in dataset:\n",
+      "\n",
       "PassengerId                          7\n",
       "Survived                             0\n",
       "Pclass                               1\n",
@@ -95,6 +108,7 @@
       "Embarked                             S\n",
       "CabinCount                         1.0\n",
       "Name: 6, dtype: object\n",
+      "\n",
       "Passengers who embarked from Queenstown:\n",
       "     PassengerId  Survived  Pclass                                  Name  \\\n",
       "5              6         0       3                      Moran, Mr. James   \n",
@@ -142,33 +156,36 @@
     "                    (df['CabinCount'] == 1)]\n",
     "\n",
     "# Display the count\n",
+    "print()\n",
     "print(\"Number of 1st class female lone survivors in their cabin:\", len(lone_survivors))\n",
+    "print()\n",
     "# Print their names\n",
     "print(lone_survivors['Name'])\n",
     "\n",
     "# 1. Determine how many samples (rows) are in the dataset\n",
+    "print()\n",
     "print(\"Number of samples in dataset:\", len(df))\n",
     "\n",
     "# 2. Display the 7th sample (remember Python uses 0-based indexing, so 7th = index 6)\n",
     "print(\"7th sample in dataset:\")\n",
+    "print()\n",
     "print(df.iloc[6])\n",
     "\n",
     "# 3. Display the samples who embarked from Queenstown (Embarked = 'Q')\n",
+    "print()\n",
     "queenstown_passengers = df[df['Embarked'] == 'Q']\n",
     "print(\"Passengers who embarked from Queenstown:\")\n",
     "print(queenstown_passengers)\n",
-    "\n",
-    "# Just names of Queenstown passengers\n",
-    "#print(df[df['Embarked'] == 'Q']['Name'])"
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3716e0be-004c-46c2-b672-b67129590397",
+   "cell_type": "raw",
+   "id": "b137f5c5-6fc5-46d8-a6af-4b647ef396a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "According to the data set sample of 891 passengers the number of 1st class female lone survivors of their cabin is at least 34. This information isn't fully accurate as this is only a sample of the thousands of passengers that were actually on the Titanic. The bias that this could create is possibly not representing all groups of people. Some groups of people may be over or under represented. It could also create an inaccurate average of our observational study."
+   ]
   }
  ],
  "metadata": {
