--- a/CCIC - AI Projects/Semester 1 - 25/Pokemon/Pokémon.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Pokemon/Pokémon.ipynb
@@ -22,9 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "0d39f093-0540-4bf3-9eb0-12a1ccb91472",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -51,14 +53,6 @@
       "Median (50%): 70.0\n",
       "Q3 (75%): 95.0\n",
       "Maximum: 155\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/anaconda-ai-2024.04-py310/lib/python3.10/site-packages/seaborn/_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n"
      ]
     },
     {
@@ -96,6 +90,9 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "# Load dataset\n",
     "df = pd.read_csv(\"pokemon.csv\")\n",
