--- a/CCIC - AI Projects/Semester 1 - 25/Pokemon/Pokémon.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Pokemon/Pokémon.ipynb
@@ -110,7 +110,7 @@
     "# Load dataset\n",
     "df = pd.read_csv(\"pokemon.csv\")\n",
     "\n",
-    "# Clean column names (remove extra spaces if any)\n",
+    "# Clean column names (remove any extra spaces)\n",
     "df.columns = df.columns.str.strip()\n",
     "\n",
     "# Filter for Generation I\n",
