Colorado Restaurant Project

--- a/CCIC - AI Projects/Semester 1 - 25/Restaurants in Colorado/Colorado Food.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Restaurants in Colorado/Colorado Food.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "0816565c-aea3-4aaa-954f-3ddd7b9efad6",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " --- Regression Results --- \n"
+      " --- Regression Results ---\n"
      ]
     },
     {
@@ -298,10 +298,8 @@
     "plt.ylabel(\"Number of Restaurants\", fontsize=12)\n",
     "plt.grid(alpha=0.3)\n",
     "plt.gca().xaxis.set_major_formatter(mtick.StrMethodFormatter(\"{x:,.0f}\"))\n",
-    "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "# plt.savefig(\"restaurants_vs_population.png\", dpi=300)\n",
     "\n",
     "# Step 5: Results as a table\n",
     "results = pd.DataFrame({\n",
@@ -309,7 +307,7 @@
     "    \"Value\": [f\"{r:.3f}\", f\"{r2:.3f}\", f\"{pred_restaurants:.0f}\"]\n",
     "})\n",
     "\n",
-    "# Final Tables (for Jupyter this renders clean)\n",
+    "# Final Tables\n",
     "print(\" --- Population Outliers ---\")\n",
     "display(population_outliers)\n",
     "\n",
