Amazon Book Data - Final Project

--- a/CCIC - AI Projects/Semester 1 - 25/Final Project - Amazon Data/Amazon Data.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Final Project - Amazon Data/Amazon Data.ipynb
@@ -1179,26 +1179,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bca8ce4-1331-480c-a961-ff7c2bd9052f",
-   "metadata": {},
-   "source": [
-    "Outlier Discussion:\n",
-    "\n",
-    "Books with unusually high reviews or high prices are statistical outliers.\n",
-    "These outliers are kept because they reflect real-world bestseller phenomena.\n",
-    "Removing them would distort true patterns in Amazon's bestsellers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0da5dc7c-c623-41f3-9716-d8d1e5642cdb",
    "metadata": {},
    "source": [
-    "Conclusion: \n",
+    "Conclusion & Outlier Discussion:\n",
+    "\n",
+    "Books with unusually high reviews or high prices are statistical outliers. These outliers are kept because they reflect real-world bestseller phenomena; removing them would distort true patterns in Amazon's bestsellers. \n",
     "\n",
     "Reviews tend to be higher for inexpensive books, while higher-priced books generally have fewer reviews, reflected in a negative correlation (r ≈ -0.25). Reviews and user ratings show a weak positive correlation (r ≈ 0.25), while price and rating are nearly uncorrelated (r ≈ 0.05).\n",
     "\n",
-    "Genre strongly affects popularity: self-help, fantasy, and biography/memoir books tend to have higher average reviews and ratings, while other genres show moderate engagement.\n",
+    "Genre strongly affects popularity: self-help, fantasy, and biography/memoir books tend to have higher average reviews and ratings, while other genres show moderate engagement. While trends vary slightly across years, the patterns in reviews, ratings, and price remain consistent over the decade of bestseller data. \n",
     "\n",
     "Overall, bestseller popularity is driven more by genre and accessibility than by price or user rating alone. This analysis provides quantitative insight into trends in Amazon's bestselling books and highlights the key factors influencing reader engagement.\n"
    ]
