Youtube Hypothesis Project

--- a/CCIC - AI Projects/Semester 1 - 25/Youtube Hypothesis - Unit 3/Youtube_hypothesis_testing.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Youtube Hypothesis - Unit 3/Youtube_hypothesis_testing.ipynb
@@ -1597,7 +1597,7 @@
     "\n",
     "   YOUR ANSWER: The primary limitations are:\n",
     "\n",
-    "Sample Imbalance: The sample was highly imbalanced (69 Not Numbered vs. 11 Numbered), weakening the representativeness of the \"Numbered\" group's average.\n",
+    "Sample Imbalance: The sample was highly imbalanced (69 Not Numbered vs. 11 Numbered), weakening the representativeness of the \"Numbered\" group's average. Industry research and best practices indicate that numbered titles generally perform better in \"how-to\" content. Due to the disproportion of the data the numbered group's average was lower than usual.\n",
     "\n",
     "Confounding Variables: The study did not account for other major factors influencing views, such as channel size, video quality, or specific sub-topic.\n",
     "\n",
@@ -1613,6 +1613,13 @@
     "\n",
     "Regression Modeling: Use regression to control for variables like channel size and video duration to isolate the effect of the title structure."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
