Remove API key from YouTube hypothesis testing notebook
Removed sensitive API key from the configuration.

--- a/CCIC - AI Projects/Semester 1 - 25/Youtube Hypothesis - Unit 3/Youtube_hypothesis_testing.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Youtube Hypothesis - Unit 3/Youtube_hypothesis_testing.ipynb
@@ -1316,7 +1316,7 @@
     "\n",
     "# --- CONFIGURATION & HYPOTHESIS SETUP ---\n",
     "# 1. REPLACE THIS WITH YOUR ACTUAL API KEY\n",
-    "API_KEY = \"AIzaSyAAdczpl-xgOSYtu1pZc7JT3G8wd9Bykfo\" \n",
+    "API_KEY = \" \" \n",
     "alpha = 0.05\n",
     "SEARCH_QUERY = \"how to\"\n",
     "MAX_VIDEOS = 80\n",
