Removed API key

--- a/CCIC - AI Projects/Semester 1 - 25/Movies Project - Unit 3/Movies Project.ipynb
+++ b/CCIC - AI Projects/Semester 1 - 25/Movies Project - Unit 3/Movies Project.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "# --- TMDB HEADERS ---\n",
     "headers = {\n",
-    "    \"Authorization\": \"Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIxODhiMmQyZDljNjdlMzhkZWRiNWI1MzhjMTBjYmJlNCIsIm5iZiI6MTY5MDU2MzUwOC4xOSwic3ViIjoiNjRjM2YzYjRlZWM0ZjMwMTA2MjRlMWNmIiwic2NvcGVzIjpbImFwaV9yZWFkIl0sInZlcnNpb24iOjF9.6J-9ZUAtXUnk6zlL_egaPHye2jixT6xReQdVNCAk1Gc\",\n",
+    "    \"Authorization\": \"Bearer \",\n",
     "    \"Accept\": \"application/json\"\n",
     "}\n",
     "\n",
